--- a/00_Everything_By_Week/Week 14/Day58_Clustering/Day58_Clustering.ipynb
+++ b/00_Everything_By_Week/Week 14/Day58_Clustering/Day58_Clustering.ipynb
@@ -15,21 +15,6 @@
     "\n",
     "**Clustering** is the process of partitioning a dataset into groups, or \"clusters,\" so that data points within the same cluster are more similar to each other than to those in other clusters. The algorithm identifies these similarities on its own, without any prior knowledge or labels. Think of it as a tool that automatically sorts your data into logical categories.\n",
     "\n",
-    "## Why K-Means Clustering?\n",
-    "\n",
-    "K-Means is one of the most popular clustering algorithms because it is:\n",
-    "- **Simple & Efficient** → Easy to implement and computationally fast.\n",
-    "- **Scalable** → Works well with large datasets.\n",
-    "- **Widely Used** → Common in customer segmentation, document clustering, and image compression.\n",
-    "\n",
-    "However, it also has **limitations**:\n",
-    "- Assumes clusters are **spherical** and evenly sized, which may not always be true.\n",
-    "- Sensitive to **outliers** and noisy data.\n",
-    "- Results depend on the **initial cluster centers** (though this is reduced with better initialization methods like `k-means++`).\n",
-    "- Requires us to **predefine k (number of clusters)**, which is not always obvious.\n",
-    "\n",
-    "---\n",
-    "\n",
     "## 2. Regression vs. Classification vs. Clustering\n",
     "\n",
     "To understand clustering better, it's helpful to see how it differs from other machine learning tasks.\n",
@@ -53,6 +38,23 @@
     "* **Density-Based Clustering**: Algorithms like DBSCAN find clusters as areas of high density, separated by areas of low density. They are good at discovering arbitrarily shaped clusters.\n",
     "\n",
     "For this notebook, we will focus on **K-Means**, which is the most widely used partitioning algorithm.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "##K-Means Clustering\n",
+    "K-Means clustering is a type of **partitioning clustering** algorithm. It is an iterative and unsupervised method that divides a dataset into a predetermined number of clusters, `K`. The goal is to partition the data into `K` groups, where each data point belongs to the cluster with the nearest mean (or centroid).\n",
+    "## Why K-Means Clustering?\n",
+    "\n",
+    "K-Means is one of the most popular clustering algorithms because it is:\n",
+    "- **Simple & Efficient** → Easy to implement and computationally fast.\n",
+    "- **Scalable** → Works well with large datasets.\n",
+    "- **Widely Used** → Common in customer segmentation, document clustering, and image compression.\n",
+    "\n",
+    "However, it also has **limitations**:\n",
+    "- Assumes clusters are **spherical** and evenly sized, which may not always be true.\n",
+    "- Sensitive to **outliers** and noisy data.\n",
+    "- Results depend on the **initial cluster centers** (though this is reduced with better initialization methods like `k-means++`).\n",
+    "- Requires us to **predefine k (number of clusters)**, which is not always obvious.\n",
     "\n",
     "---\n",
     "\n",
