--- a/00_Everything_By_Week/Week 14/Day58_Clustering/Day58_Clustering.ipynb
+++ b/00_Everything_By_Week/Week 14/Day58_Clustering/Day58_Clustering.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "---\n",
     "\n",
-    "##K-Means Clustering\n",
+    "## 4. K-Means Clustering\n",
     "K-Means clustering is a type of **partitioning clustering** algorithm. It is an iterative and unsupervised method that divides a dataset into a predetermined number of clusters, `K`. The goal is to partition the data into `K` groups, where each data point belongs to the cluster with the nearest mean (or centroid).\n",
     "## Why K-Means Clustering?\n",
     "\n",
@@ -58,7 +58,7 @@
     "\n",
     "---\n",
     "\n",
-    "## 4. K-Means Clustering: Manual Math Example\n",
+    "## 5. K-Means Clustering: Manual Math Example\n",
     "\n",
     "**K-Means** is an iterative algorithm that aims to partition data into `K` clusters.\n",
     "\n",
